--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "biome check .",
     "format": "biome format --write .",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
     "@brainwave/server": "workspace:*",
