--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "biome check .",
-    "format": "biome format --write .",
-    "start": "vite preview"
-  },
-  "dependencies": {
-    "@brainwave/server": "workspace:*",
-    "@elysiajs/eden": "catalog:",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@brainwave/config": "workspace:*",
-    "@biomejs/biome": "catalog:",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "elysia": "catalog:",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+	"name": "client",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "biome check .",
+		"format": "biome format --write .",
+		"start": "vite preview"
+	},
+	"dependencies": {
+		"@brainwave/server": "workspace:*",
+		"@elysiajs/eden": "catalog:",
+		"@tailwindcss/vite": "^4.1.18",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "catalog:",
+		"@brainwave/config": "workspace:*",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"elysia": "catalog:",
+		"tailwindcss": "^4.1.18",
+		"typescript": "^5.0.2",
+		"vite": "^5.4.0"
+	}
 }
