--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,31 +1,41 @@
 {
-	"name": "client",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "biome check .",
-		"format": "biome format --write .",
-		"start": "vite preview"
-	},
-	"dependencies": {
-		"@brainwave/server": "workspace:*",
-		"@elysiajs/eden": "catalog:",
-		"@tailwindcss/vite": "^4.1.18",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "catalog:",
-		"@brainwave/config": "workspace:*",
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
-		"@vitejs/plugin-react-swc": "^3.3.2",
-		"elysia": "catalog:",
-		"tailwindcss": "^4.1.18",
-		"typescript": "^5.0.2",
-		"vite": "^5.4.0"
-	}
+  "name": "client",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "biome check .",
+    "start": "vite preview"
+  },
+  "dependencies": {
+    "@base-ui/react": "^1.2.0",
+    "@fontsource-variable/geist": "^5.2.8",
+    "@phosphor-icons/react": "^2.1.10",
+    "@tailwindcss/vite": "^4.1.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "radix-ui": "^1.4.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "shadcn": "^3.8.4",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
+    "@brainwave/server": "workspace:*",
+    "@elysiajs/eden": "catalog:"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "catalog:",
+    "@brainwave/config": "workspace:*",
+    "elysia": "catalog:",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.4"
+  }
 }
