--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,13 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "biome check .",
+    "format": "biome format --write .",
     "start": "vite preview"
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
+    "@brainwave/server": "workspace:*",
+    "@elysiajs/eden": "catalog:",
     "@fontsource-variable/geist": "^5.2.8",
     "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-router": "^1.159.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "radix-ui": "^1.4.3",
@@ -22,9 +26,7 @@
     "shadcn": "^3.8.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
-    "tw-animate-css": "^1.4.0",
-    "@brainwave/server": "workspace:*",
-    "@elysiajs/eden": "catalog:"
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "catalog:",
