--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,19 +1,30 @@
 {
-	"name": "@brainwave/server",
-	"version": "0.0.1",
-	"type": "module",
-	"main": "./src/index.ts",
-	"types": "./src/index.ts",
-	"exports": {
-		".": "./src/index.ts"
-	},
-	"dependencies": {
-		"@elysiajs/cors": "^1.4.1",
-		"elysia": "^1.0.0"
-	},
-	"devDependencies": {
-		"@brainwave/config": "workspace:*",
-		"@biomejs/biome": "catalog:",
-		"typescript": "^5.0.0"
-	}
+  "name": "@brainwave/server",
+  "version": "0.0.1",
+  "type": "module",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "scripts": {
+    "generate": "bunx drizzle-kit generate",
+    "migrate": "bunx drizzle-kit migrate"
+  },
+  "exports": {
+    ".": "./src/index.ts"
+  },
+  "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
+    "dotenv": "^17.3.1",
+    "drizzle-orm": "^0.45.1",
+    "elysia": "^1.0.0",
+    "pg": "^8.18.0",
+    "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "catalog:",
+    "@brainwave/config": "workspace:*",
+    "@types/pg": "^8.16.0",
+    "drizzle-kit": "^0.31.9",
+    "tsx": "^4.21.0",
+    "typescript": "^5.0.0"
+  }
 }
