--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,10 +17,12 @@
     "@fontsource-variable/geist": "^5.2.8",
     "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.159.10",
     "@tanstack/react-router-devtools": "^1.159.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "nanoid": "^5.1.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
