--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.0.0",
+    "kafkajs": "^2.2.4",
     "pg": "^8.18.0",
     "zod": "^4.3.6"
   },
