--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     image: apache/kafka:4.1.1
     ports:
       - 9092:9092
+    environment:
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
   redis:
     image: redis:8
     ports:
