--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -35,11 +35,12 @@
   "devDependencies": {
     "@biomejs/biome": "catalog:",
     "@brainwave/config": "workspace:*",
-    "elysia": "catalog:",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "bun-types": "^1.3.9",
+    "elysia": "catalog:",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
