--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -21,5 +21,5 @@ COPY --from=builder /app/packages/server ./packages/server
 COPY --from=builder /app/packages/config ./packages/config
 COPY --from=builder /app/apps/server ./apps/server
 
-
+WORKDIR /app/packages/server
 CMD ["bun", "x", "drizzle-kit", "migrate"]
