--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,25 +1,12 @@
-FROM oven/bun:1-alpine AS base
+FROM oven/bun:1-alpine
 WORKDIR /app
 
-FROM base AS deps
 COPY package.json bun.lockb* ./
 COPY packages/server/package.json ./packages/server/
 COPY packages/config/package.json ./packages/config/
-COPY apps/server/package.json ./apps/server/
 RUN bun install --frozen-lockfile
 
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
+COPY packages/server ./packages/server
+COPY packages/config ./packages/config
 
-FROM base AS runner
-ENV NODE_ENV=production
-WORKDIR /app
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/packages/server ./packages/server
-COPY --from=builder /app/packages/config ./packages/config
-COPY --from=builder /app/apps/server ./apps/server
-
-WORKDIR /app/packages/server
-CMD ["bun", "x", "drizzle-kit", "migrate"]
+CMD ["bun", "run", "--cwd", "packages/server", "migrate"]
