--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,11 @@ services:
     networks:
       - brainwave-network
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "kafka-broker-api-versions --bootstrap-server localhost:9092",
-        ]
+      test: ["CMD-SHELL", "nc -z localhost 9092 || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 15s
 
   server-migrations:
     build:
