--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.migrations
+      args:
+        DATABASE_URL: ${DATABASE_URL}
     environment:
       DATABASE_URL: ${DATABASE_URL}
     networks:
